fix full height fit on mobile browsers

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -50,3 +50,7 @@ p + p {
 a {
   @apply border-b-2 border-darkSecondary text-darkSecondary transition-colors hover:border-darkTertiary hover:text-darkTertiary;
 }
+
+#___gatsby, #gatsby-focus-wrapper {
+  @apply h-full;
+}
